--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,9 @@ services:
     image: mall4j-api
     ports:
       - 8086:8086
+    enviroment:
+      REDIS_HOST: 127.0.0.1
+      REDIS_PORT: 6379
     depends_on:
       - mall4j-redis
       - mall4j-mysql
