--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     image: mall4j-api
     ports:
       - 8086:8086
-    enviroment:
+    environment:
       REDIS_HOST: 127.0.0.1
       REDIS_PORT: 6379
     depends_on:
