--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ services:
     restart: always
     container_name: mall4j-admin
     image: mall4j-admin
+    environment:
+      REDIS_HOST: mall4j-redis
+      REDIS_PORT: 6379
     ports:
       - 8085:8085
     depends_on:
